[project]
name = "mikubot-v2"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "sushi-chaaaan", email = "mail@sushichan.live" }]
dependencies = [
    "aiohttp~=3.8.4",
    "pydantic~=1.10.8",
    "discord-py[speed,voice] @ git+https://github.com/Rapptz/discord.py.git",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black~=23.3.0",
    "mypy~=1.3.0",
    "isort~=5.12.0",
    "pyproject-flake8~=6.0.0.post1",
    "flake8-isort~=6.0.0",
    "poethepoet~=0.20.0",
    "python-dotenv~=1.0.0",
    "pre-commit~=3.3.2",
    "pip-tools~=6.13.0",
]
[tool.hatch.metadata]
allow-direct-references = true


[tool.black]
target-version = ["py310"]
line-length = 125

[tool.flake8]
max-line-length = 125
extend-exclude = [".venv"]
extend-ignore = ["E203", "W503"]

[tool.isort]
profile = "black"
line_length = 125
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
exclude = [".venv"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.rye.scripts]
lint = { chain = ["lint:mypy-stub", "lint:flake8", "lint:isort", "lint:mypy"] }
"lint:flake8" = "rye run pflake8 ."
"lint:isort" = "rye run isort -c ."
"lint:mypy" = "rye run mypy ."
"lint:mypy-stub" = "mypy --install-types --non-interactive"

format = { chain = ["format:isort", "format:black"] }
"format:isort" = "rye run isort ."
"format:black" = "rye run black ."

up = { cmd = ["python", "-B", "-O", "main.py"] }


export = { cmd = ["python", "-B", "-m", "rye-export"] }
# [tool.poe.tasks]
# # lint
# lint.sequence = ["_mypy_stub", "_pflake8", "_isort-c", "_mypy"]
# lint.ignore_fail = "return_zero"
# _pflake8 = "rye run pflake8 ."
# _isort-c = "rye run isort -c ."
# _mypy = "rye run mypy ."
# _mypy_stub = "mypy --install-types --non-interactive"

# # format
# format.sequence = ["_black", "_isort"]
# fmt.sequence = ["format"]
# format.ignore_fail = "return_zero"
# _black = "rye run black ."
# _isort = "rye run isort ."

# # export
# export = "poetry export -f requirements.txt -o requirements.txt --only main --without-hashes"
