[tool.poetry]
name = "mikubot-v2"
version = "0.1.0"
description = ""
authors = ["sushi-chaaaan <mail@sushichan.live>"]
readme = "README.md"
packages = [{ include = "mikubot_v2" }]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = { git = "https://github.com/Rapptz/discord.py.git", rev = "master", extras = [
    "voice",
    "speed",
] }
pydantic = "^2.0"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^1.4.1"
poethepoet = "^0.20.0"
python-dotenv = "^0.21.1"
pre-commit = "^3.1.0"
# FIXME https://github.com/python-poetry/poetry-plugin-export/issues/176
typing-extensions = ">=4.6.0,<4.7.0"
ruff = "^0.0.282"
pytest = "^7.4.0"

[tool.ruff]
# https://qiita.com/yuji38kwmt/items/63e82126076204923520
target-version = "py311"
line-length = 125
ignore = [
    "E203",
    "D",
    "RUF001",  # 全角記号など`ambiguous unicode character`も使いたいため
    "RUF002",  # 全角記号など`ambiguous unicode character`も使いたいため
    "RUF003",  # 全角記号など`ambiguous unicode character`も使いたいため
    "PLC1901", # compare-to-empty-string : `if a == "`のように空文字列で直接比較したいときがあるため
    "ANN101",  # missing-type-self: 引数selfには型ヒントは付けていないため
    "ANN102",  # missing-type-cls: 引数clsには型ヒントは付けていないため
    "ERA",     # : 役立つこともあるが、コメントアウトしていないコードも警告されるので無視する
]
select = ["ALL"]

[tool.ruff.per-file-ignores]
"./app/**" = [
    "INP001", # add __init__.py to app directory is too much work
]
"/**/tests/**" = [
    "INP001", # add __init__.py to tests directory is too much work
    "S101",   # allow to use assert in tests
]

[tool.black]
target-version = ["py311"]
line-length = 125

[tool.mypy]
python_version = "3.11"
exclude = [".venv"]
follow_imports = "normal"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
implicit_reexport = true

[tool.poe.tasks]
# lint
lint.sequence = ["_mypy_stub", "_mypy"]
lint.ignore_fail = "return_zero"
_mypy = "poetry run mypy ."
_mypy_stub = "mypy --install-types --non-interactive"

# format
format.sequence = ["_black"]
fmt.sequence = ["format"]
format.ignore_fail = "return_zero"
_black = "poetry run black ."

# export
export = "poetry export -f requirements.txt -o requirements.txt --only main --without-hashes"

# test
test = "poetry run pytest tests/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
